--- a/BasicOfpython.ipynb
+++ b/BasicOfpython.ipynb
@@ -378,8 +378,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "8fe9fa33-ebde-403d-b543-768d7bab60d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This python 0\n",
+      "This python 1\n",
+      "This python 2\n",
+      "This python 3\n",
+      "This python 4\n",
+      "This python 5\n",
+      "This python 6\n",
+      "This python 7\n",
+      "This python 8\n",
+      "This python 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,10,1):\n",
+    "    print(\"This python\",i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "9aebd397-abf0-4b49-b17d-bd0578e8c319",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this python 10\n",
+      "this python 8\n",
+      "this python 6\n",
+      "this python 4\n",
+      "this python 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10,0,-2):\n",
+    "    print(\"this python\",i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7fcc5dbf-63ff-42eb-9fba-b5684bb2b806",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [1,3,23,45,54]\n",
+    "\n",
+    "for i in range(len(myList)):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5e65ca92-f78e-4589-9038-6bc1f5375d55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 21\n",
+      "1 43\n",
+      "2 2\n",
+      "3 55\n",
+      "4 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList =[21,43,2,55,64]\n",
+    "\n",
+    "for i in range(len(myList)):\n",
+    "    print(i,myList[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "64e6bb9a-a629-451c-a4f7-bd0ed63f0bb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList =[i for i in range(10)]\n",
+    "print(myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0cb7b49a-7df2-4e23-996c-2e28889831ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [0 for i in range(10)]\n",
+    "print(myList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c6101697-8cc1-4b29-aa47-bce414acdbfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calAvg(a,b,c):\n",
+    "    avg =(a+b+c)/3.0\n",
+    "    print(avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "618aad83-5a57-47f9-8f1d-7daa48d37ef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "calAvg(20,30,40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3fe3fb51-83ec-46bc-8769-b60ae92968f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(arg1,arg2):\n",
+    "    total = arg1 + arg2\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "dfb36ee2-74c1-447f-b111-faf41cf8b1ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = add(10,20)\n",
+    "print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "825c116a-42fd-43b6-b8c3-3585ff622336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calNew = lambda a,b,c:(a+b+c)/3.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1b5a257a-bd52-4927-8d51-8a2db07150ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "val =calNew(10,20,30)\n",
+    "print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9ce9e217-66e1-4b9c-a8c2-f221c3f4f00d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Student Maths: 55,45,60\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53.333333333333336\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Do you need another entry(y/n): N\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loop ENDS\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(True):\n",
+    "    maths,phy,chem = eval(input(\"Enter Student Maths:\"))\n",
+    "    calAvg(maths,phy,chem)\n",
+    "\n",
+    "    option = input(\"Do you need another entry(y/n):\")\n",
+    "\n",
+    "    if(option == 'n' or option =='N'):\n",
+    "        break\n",
+    "\n",
+    "print('Loop ENDS')\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e4ddeae8-3520-43a5-8716-59a7ee19d6fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Student Maths: -12,20,60\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marks cannot be NEGATIVE  !\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Student Maths: 20,20,20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Do you need another entry(y/n): n\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loop ENDS\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(True):\n",
+    "    maths,phy,chem = eval(input(\"Enter Student Maths:\"))\n",
+    "\n",
+    "    if(maths<0 or phy<0 or chem<0):\n",
+    "        print('Marks cannot be NEGATIVE  !')\n",
+    "        continue\n",
+    "        \n",
+    "    calAvg(maths,phy,chem)\n",
+    "\n",
+    "    option = input(\"Do you need another entry(y/n):\")\n",
+    "\n",
+    "    if(option == 'n' or option =='N'):\n",
+    "        break\n",
+    "\n",
+    "print('Loop ENDS')\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f276b765-ea84-47da-9e37-b4f039b9d6f7",
    "metadata": {},
    "outputs": [],
    "source": []
