Added practice work with NumPy arrays - created and printed empty, random, and reshaped arrays

--- a/BasicOfpython.ipynb
+++ b/BasicOfpython.ipynb
@@ -724,8 +724,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f276b765-ea84-47da-9e37-b4f039b9d6f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11, 12, 13, 14], [22, 23, 24, 25], [33, 34, 35, 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "array1 = [[11,12,13,14],\n",
+    "          [22,23,24,25],\n",
+    "          [33,34,35,36]]\n",
+    "array1_new = np.array(array1)\n",
+    "\n",
+    "print(array1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "58018f56-6f1b-466d-bd68-360e693cfeb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12 13 14]\n",
+      " [22 23 24 25]\n",
+      " [33 34 35 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array1_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1c652b9e-fdb7-493d-bd38-1ca3cb28c7ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x =[1,2,3,4]\n",
+    "array2 =np.array(x)\n",
+    "print(array2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "da1fcf56-94b0-4e42-8116-0cd2a1b37341",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array1 =[[11,12,13,14],\n",
+    "         [22,23,24,25],\n",
+    "         [33,34,35,36]]\n",
+    "array1_new = np.array(array1)\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a8a67507-cd12-40c1-8291-ea39289c7df9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12 13 14]\n",
+      " [22 23 24 25]\n",
+      " [33 34 35 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array1_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "866418dd-d998-4ade-b859-d92fe45fee4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array1_new.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2994ef76-eb13-4369-91f5-b5bc69a4baef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array2 = array1_new.reshape(4,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cdabef10-ba0b-433c-a72d-eed5deecb50e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12 13]\n",
+      " [14 22 23]\n",
+      " [24 25 33]\n",
+      " [34 35 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4e34e152-aaf6-4c6b-bd90-421c107214e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12]\n",
+      " [13 14]\n",
+      " [22 23]\n",
+      " [24 25]\n",
+      " [33 34]\n",
+      " [35 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array2 =array1_new.reshape(6,2)\n",
+    "print(array2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "415116d3-d4ef-4495-8502-27b6eff9afab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-10  -8  -6  -4  -2   0   2   4   6   8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array =np.arange(-10,10,2)\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c7c0f580-87e0-4378-9da6-a0c50b3934e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[158208      0]\n",
+      " [     0      0]\n",
+      " [     0 289280]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.empty((3, 2), dtype=int)  # Fixed dtype\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4888d840-d03a-4373-8727-d991d0e986ea",
    "metadata": {},
    "outputs": [],
    "source": []
