practice work with NumPy arrays

--- a/BasicOfpython.ipynb
+++ b/BasicOfpython.ipynb
@@ -937,8 +937,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4888d840-d03a-4373-8727-d991d0e986ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = np.random.randint(0,100,(10,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d1b0a827-73f7-4ba0-b9a3-3e6326ab34ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 95 55 27 23]\n",
+      " [60 72 47  3 47]\n",
+      " [83 76 72 73 39]\n",
+      " [67 37 72 45 77]\n",
+      " [98 38 68 96 46]\n",
+      " [11 16 97 18 40]\n",
+      " [59 56 36 96 34]\n",
+      " [63 91 83 78 31]\n",
+      " [49 46 21 40 22]\n",
+      " [19 20 74 49  8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bdb42ed3-1888-4f70-a9b6-8e0e8d6ddb29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array1 = np.random.randint(0,100,(4,3))\n",
+    "array2 = np.random.randint(0,100,(4,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "21d9f712-4a73-4817-8b1e-49dde2b98b34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array3 = array1 +array2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "743d920d-1f4d-43ad-8538-bc4923c552f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aray1: [[24 80 79]\n",
+      " [ 4 60 43]\n",
+      " [23 98 92]\n",
+      " [53 40 61]]\n",
+      "array2: [[27 44 15]\n",
+      " [ 8 59 92]\n",
+      " [15 79 56]\n",
+      " [88  8 76]]\n",
+      "array3: [[ 51 124  94]\n",
+      " [ 12 119 135]\n",
+      " [ 38 177 148]\n",
+      " [141  48 137]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('aray1:',array1)\n",
+    "print('array2:',array2)\n",
+    "print('array3:',array3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b1783255-c368-489c-870d-3a17b80ef5ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array1 = np.random.randint(0,100,(4,3))\n",
+    "\n",
+    "array2 = array1/10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "176b1e8f-6342-4b6b-b79b-0fa6c880cc00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1: [[59 84 49]\n",
+      " [38 96 64]\n",
+      " [83 48 58]\n",
+      " [72 99  3]]\n",
+      "array2: [[5.9 8.4 4.9]\n",
+      " [3.8 9.6 6.4]\n",
+      " [8.3 4.8 5.8]\n",
+      " [7.2 9.9 0.3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('array1:',array1)\n",
+    "print('array2:',array2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a3c3f673-467a-4809-9ea1-17e61fafe27a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1: [[23 28 80]\n",
+      " [ 7 62 75]\n",
+      " [ 5 57 16]\n",
+      " [55 39 67]]\n",
+      "array2: [[29 15 55 70 95]\n",
+      " [86 48 29 42 13]\n",
+      " [89 71  0 74 20]]\n",
+      "array4: [[10195  7369  2077  8706  4149]\n",
+      " [12210  8406  2183  8644  2971]\n",
+      " [ 6471  3947  1928  3928  1536]\n",
+      " [10912  7454  4156 10446  7072]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array1 = np.random.randint(0,100,(4,3))\n",
+    "array2 = np.random.randint(0,100,(3,5))\n",
+    "\n",
+    "print('array1:',array1)\n",
+    "print('array2:',array2)\n",
+    "\n",
+    "array4 = np.matmul(array1,array2)\n",
+    "print('array4:',array4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d69c48d5-69af-4cc2-9bbd-4bd419dc091a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[67 82 73 53 51 94 63]\n",
+      " [88 54 11 96 10 23 30]\n",
+      " [50 89 68 19 35 28 69]\n",
+      " [91 84 59 62 33 74 49]\n",
+      " [65 23 77 74 96 31 76]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = np.random.randint(0,100,(5,7))\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "de1243de-3d19-4abf-866c-b05fcbf434bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.max(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "95539f22-e6a4-4dbe-87cf-caf1f4a293b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.argmax(array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "31ecf311-7de6-44a2-b045-876484a5064f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[91 89 77 96 96 94 76]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.max(array,axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8f4ac221-985e-478f-b0f3-5a2b04d38f4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[94 96 89 91 96]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.max(array,axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a017b75e-791d-4bdf-ac1a-e394fd7f58ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 2 4 1 4 0 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.argmax(array,axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fd59b64e-ae5e-4dd6-aac5-a913e5d86bd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array[2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9f27c4af-acc8-4d03-83b6-92f3bfa071ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[67 82 73 53]\n",
+      " [88 54 11 96]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array[0:2,0:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e70cb36f-e017-4b7f-88cf-eab965521305",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[67 82 73 53]\n",
+      " [88 54 11 96]\n",
+      " [50 89 68 19]\n",
+      " [91 84 59 62]\n",
+      " [65 23 77 74]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(array[:,0:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a80d1b4-12ad-40db-98b9-2c7d5c9d3f77",
    "metadata": {},
    "outputs": [],
    "source": []
